--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -311,6 +311,11 @@
       badges: pypi
       builtons: [opengl]
 
+    - repo: ambeelabs/gspatial_plot
+      site: https://gspatial-plot.readthedocs.io
+      badges: pypi
+      builtons: [matplotlib]
+
 - name: Graphs and networks
   intro: Tools specifically focused on visualizing graphs (networks).  Several of the other plotting libraries listed in other sections can also plot graphs, including Bokeh, HoloViews, Matplotlib, and Plotly.
   packages:
