--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -319,6 +319,11 @@
       badges: pypi
       builtons: [matplotlib]
 
+    - repo: raphaelquast/eomaps
+      site: https://eomaps.readthedocs.io
+      badges: pypi, conda, codecov, site
+      builtons: [matplotlib, cartopy]
+
 - name: Graphs and networks
   intro: Tools specifically focused on visualizing graphs (networks).  Several of the other plotting libraries listed in other sections can also plot graphs, including Bokeh, HoloViews, Matplotlib, and Plotly.
   packages:
