website_dev (and add conda-channel)

--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -321,6 +321,7 @@
 
     - repo: raphaelquast/eomaps
       site: https://eomaps.readthedocs.io
+      conda_channel: conda-forge
       badges: pypi, conda, codecov, site
       builtons: [matplotlib, cartopy]
 
