Added weave, plus added numfocus to holoviz sponsors

--- a/tools/sponsors.yml
+++ b/tools/sponsors.yml
@@ -92,3 +92,7 @@ mljar:
   label: mljar
   url: https://mljar.com
   logo: _static/badges/mljar.png
+
+wandb:
+  label: Weights and Biases
+  url: https://wandb.ai/
