--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -561,8 +561,10 @@
       badges: pypi
 
     - repo: kitware/trame
-      badges: pypi
+      conda_channel: conda-forge
+      badges: pypi, conda, site
       site: https://kitware.github.io/trame
+      sponsors: [Kitware]
 
     - repo: rstudio/py-shiny
       site: https://shiny.rstudio.com/py
