--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -354,6 +354,7 @@
       site: https://www.pygmt.org
       conda_channel: conda-forge
       badges: pypi, conda, codecov
+      builtons: [gmt]
 
 - name: Graphs and networks
   intro: Tools specifically focused on visualizing graphs (networks).  Several of the other plotting libraries listed in other sections can also plot graphs, including Bokeh, HoloViews, Matplotlib, and Plotly.
