Add PyGMT to the geospatial category, linking to gmt under builtons (#167)

--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -350,6 +350,12 @@
       badges: pypi, conda, codecov, site
       builtons: [matplotlib, cartopy]
 
+    - repo: GenericMappingTools/pygmt
+      site: https://www.pygmt.org
+      conda_channel: conda-forge
+      badges: pypi, conda, codecov
+      builtons: [gmt]
+
 - name: Graphs and networks
   intro: Tools specifically focused on visualizing graphs (networks).  Several of the other plotting libraries listed in other sections can also plot graphs, including Bokeh, HoloViews, Matplotlib, and Plotly.
   packages:
