--- a/tools/sponsors.yml
+++ b/tools/sponsors.yml
@@ -100,4 +100,8 @@ mljar:
 
 wandb:
   label: Weights and Biases
-  url: https://wandb.ai/
+  url: https://wandb.ai
+
+mckinsey:
+  label: McKinsey
+  url: https://mckinsey.com
