Add site and conda to solara and reacton
Thanks for doing this work, and hope my changes are correct

--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -579,10 +579,14 @@
       sponsors: [datapane]
 
     - repo: widgetti/solara
-      badges: pypi
+      site: https://solara.dev
+      badges: pypi, conda
+      conda_channel: conda-forge
 
     - repo: widgetti/reacton
-      badges: pypi
+      site: https://reacton.solara.dev
+      badges: pypi, conda
+      conda_channel: conda-forge
 
     - repo: zauberzeug/nicegui
       badges: pypi
