--- a/tools/builtons.yml
+++ b/tools/builtons.yml
@@ -62,3 +62,8 @@ gmt:
   label: gmt
   url: https://www.generic-mapping-tools.org/
   logo: _static/badges/builtons/gmt.png
+  
+vulkan:
+  label: vulkan
+  url: https://www.vulkan.org/
+  logo: _static/badges/builtons/vulkan.png
