--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,6 +11,10 @@ on:
     - cron: "0 8 * 1-12 1"  # Every monday at 8 am
   workflow_dispatch:
 
+permissions:
+  # To allow the workflow to push to the origin, when actions/checkout is used.
+  contents: write
+
 jobs:
   pre_ci:
     runs-on: 'ubuntu-latest'
@@ -67,7 +71,7 @@ jobs:
           git add -f ./doc/_static/cache
           ls ./doc/_static/cache
           git commit -m "adding cached badges"
-          git push -f "https://pyviz-developers:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git" HEAD:cache
+          git push -f HEAD:cache
       - uses: actions/checkout@v3
         with:
           clean: false
