--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -63,7 +63,7 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           mv ./doc/_static/cache ./tmp
-          git fetch "https://github.com/$GITHUB_REPOSITORY.git" cache:refs/remotes/cache
+          git fetch origin cache
           git checkout cache
           mv ./tmp/* ./doc/_static/cache
           git add -f ./doc/_static/cache
@@ -76,7 +76,7 @@ jobs:
       - name: Build website
         run: |
           git checkout -b deploy-tmp
-          git fetch "https://github.com/$GITHUB_REPOSITORY.git" cache:refs/remotes/cache  # all cached badges are in this branch
+          git fetch origin cache  # all cached badges are in this branch
           git checkout cache -- ./doc/_static/cache
           anaconda-project run build_website
       - name: git status
