--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,6 +11,10 @@ on:
     - cron: "0 8 * 1-12 1"  # Every monday at 8 am
   workflow_dispatch:
 
+permissions:
+  # To allow the workflow to push to the origin, when actions/checkout is used.
+  contents: write
+
 jobs:
   pre_ci:
     runs-on: 'ubuntu-latest'
@@ -51,31 +55,28 @@ jobs:
           miniconda-version: "latest"
       - name: conda setup
         run: |
-          eval "$(conda shell.bash hook)"
           conda install anaconda-project
           anaconda-project prepare
       - name: Build cache
         run: |
-          eval "$(conda shell.bash hook)"
           anaconda-project run build_cache
           git config user.name github-actions
           git config user.email github-actions@github.com
           mv ./doc/_static/cache ./tmp
-          git fetch "https://github.com/$GITHUB_REPOSITORY.git" cache:refs/remotes/cache
+          git fetch origin cache
           git checkout cache
           mv ./tmp/* ./doc/_static/cache
           git add -f ./doc/_static/cache
           ls ./doc/_static/cache
           git commit -m "adding cached badges"
-          git push -f "https://pyviz-developers:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git" HEAD:cache
+          git push -f HEAD:cache
       - uses: actions/checkout@v3
         with:
           clean: false
       - name: Build website
         run: |
-          eval "$(conda shell.bash hook)"
           git checkout -b deploy-tmp
-          git fetch "https://github.com/$GITHUB_REPOSITORY.git" cache:refs/remotes/cache  # all cached badges are in this branch
+          git fetch origin cache  # all cached badges are in this branch
           git checkout cache -- ./doc/_static/cache
           anaconda-project run build_website
       - name: git status
