--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -74,7 +74,7 @@ jobs:
         run: |
           git checkout -b deploy-tmp
           git fetch origin cache  # all cached badges are in this branch
-          git checkout cache -- ./doc/_static/cache
+          git checkout origin/cache -- ./doc/_static/cache
           anaconda-project run build_website
       - name: git status
         run: |
