--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -373,6 +373,12 @@
       badges: pypi
       builtons: [matplotlib]
 
+    - repo: bjlittle/geovista
+      site: https://geovista.readthedocs.io
+      conda_channel: conda-forge
+      badges: pypi, conda, codecov, site
+      builtons: [pyvista]
+
 - name: Graphs and networks
   intro: Tools specifically focused on visualizing graphs (networks).  Several of the other plotting libraries listed in other sections can also plot network graphs, including Bokeh, HoloViews, hvPlot, Matplotlib, and Plotly.
   packages:
